= BinData Changelog

== Version 0.9.3 (2008-12-03)

* Arrays can now :read_until => :eof
* TCPSocket and UDPSocket can now be used as input streams (patch courtesy
  of Peter Suschlik).
* Added 128 bit integers.
* Significant memory usage reduction.
* Added custom mandatory and default parameters for user defined MultiValues.

== Version 0.9.2 (2008-07-18)

* Added lazy instantiation to allow recursive definitions.
* Array elements can be appended at any position.
* Deprecated the :readwrite parameter.
* Removed feature where Struct fields names could be nil.
* Reworked sanitizing system.

== Version 0.9.1 (2008-06-15)

* Implemented bit fields.
* Added :onlyif parameter to Base for specifying optional fields.
* Fixed IO offset bug with SingleValues.

== Version 0.9.0 (2008-06-02)

* Added :adjust_offset option to automatically seek to a given offset.
* Modified #read to accept strings as well as IO streams.
* Choice now accepts sparse arrays and hashes as :choice.
* Added BinData::Rest to help with debugging.
* Major internal restructuring - memory usage is much better.
* Improved documentation.

== Version 0.8.1 (2008-01-14)

* Reduced memory consumption.
* Increased execution speed.
* Deprecated BinData::Base.parameters.
* Fixed spec syntax (thanks to David Goodlad).

== Version 0.8.0 (2007-10-14)

* Add reserved field names to Struct.
* Prevent warnings about method redefinition.
* Allow Struct to masquerade as one of its fields.
* Renamed String param :initial_length to :read_length.
* BinData::Array now behaves more like the internal ruby array.

== Version 0.7.0 (2007-08-26)

* Arrays now support terminating conditions as well as fixed length reads.
* Updated specs to new rspec syntax (0.9).
* Added scoped resolution of variables in lambdas.
* Added ability to append elements to arrays.

== Version 0.6.0 (2007-03-28)

* Added 64 bit integers.
* Added floating point numbers.
* Added endian keyword to Struct to reduce the amount of typing needed.
